--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 
 @theme inline {
   --color-background: var(--background);
-  --color-foreground: var(--foreground);  
+  --color-foreground: var(--foreground);
   --font-inter: var(--font-inter);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
@@ -78,9 +78,9 @@
 }
 
 .dark {
-  --primay-color: #EC8A2C;
-  --secondary-color: #27283C;
-  --accent-color: #E6E8EA;
+  --primay-color: #ec8a2c;
+  --secondary-color: #27283c;
+  --accent-color: #e6e8ea;
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
@@ -123,7 +123,8 @@
   }
 }
 
-::view-transition-old(root), ::view-transition-new(root) {
-    animation: none;
-    mix-blend-mode: normal;
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
 }
